samples/_failures_safe/1761192092_323e9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38c505ee.c: In function ‘main’:
./samples/SAFE/__tmp_38c505ee.c:159:25: error: ‘log’ undeclared (first use in this function); did you mean ‘logs’?
  159 |     for (int i = 0; i < log
      |                         ^~~
      |                         logs
./samples/SAFE/__tmp_38c505ee.c:159:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_38c505ee.c:159:28: error: expected ‘;’ at end of input
  159 |     for (int i = 0; i < log
      |                            ^
      |                            ;
./samples/SAFE/__tmp_38c505ee.c:159:5: error: expected declaration or statement at end of input
  159 |     for (int i = 0; i < log
      |     ^~~
